--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 body {
+  position: relative;
+  padding: 0;
   background: linear-gradient(to right, #ffb871, #dd5380, #7545a9);
+  overflow: hidden;
+}
+
+.container-wrapper {
   height: 100vh;
-  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 section {
-  height: 50vh;
-  width: 30vw;
-  background-color: rgba(255, 255, 0, 0.3);
-  place-self: center;
-  margin-top: 100px;
-  border-radius: 0.8rem;
-  padding: 0.8rem;
-  box-sizing: border-box;
-
+  position: absolute;
+  top: 20%;
+  width: 22%;
+  height: 315px;
+  border-top: 3px rgba(255, 255, 255, 0.4) solid;
+  border-left: 3px rgba(255, 255, 255, 0.4) solid;
+  border-radius: 15px;
+  background: rgba(244, 138, 124, 0.2);
+  box-shadow: 10px 10px 70px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 15px;
+  transition: transform 0.7s cubic-bezier(0, 1.3, 1, 1);
 }
 
 .rectangle {
