--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 body {
+  background-color: black;
+  height: 100vh;
   position: relative;
   padding: 0;
+  overflow: hidden;
+  margin:6% 0;
+}
+
+.container-wrapper {
+  height: 75%;
+  display: flex;
+  justify-content: center;
   background: linear-gradient(to right, #ffb871, #dd5380, #7545a9);
   overflow: hidden;
 }
 
-.container-wrapper {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-}
-
 section {
   position: absolute;
-  top: 20%;
+  top: 15%;
   width: 22%;
   height: 315px;
   border-top: 3px rgba(255, 255, 255, 0.4) solid;
@@ -25,7 +29,8 @@ section {
   flex-direction: column;
   padding: 10px;
   gap: 15px;
-  transition: transform 0.7s cubic-bezier(0, 1.3, 1, 1);
+  transition: transform 0.7s cubic-bezier(0, 1.3, 1, 1), opacity 0.7s ease-out;
+  overflow: hidden;
 }
 
 .rectangle {
