--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
   background-color: black;
   height: 100vh;
-  position: relative;
   padding: 0;
   overflow: hidden;
-  margin:6% 0;
+  margin: 6% 0;
 }
 
 .container-wrapper {
+  position: relative;
   height: 75%;
   display: flex;
   justify-content: center;
@@ -29,28 +29,32 @@ section {
   flex-direction: column;
   padding: 10px;
   gap: 15px;
-  transition: transform 0.7s cubic-bezier(0, 1.3, 1, 1), opacity 0.7s ease-out;
+  transition: transform 0.7s cubic-bezier(0.5, 1.3, 1, 1), opacity 0.7s ease-out;
   overflow: hidden;
 }
 
 .rectangle {
   background-color: #cadf7e;
   border-radius: 0.8rem;
+  opacity: 0.25;
 }
 
 .big {
   width: 100%;
   height: 50%;
+  box-shadow: inset 4px 4px 4px 5px rgba(255, 254, 254, 0.7);
 }
 
 .medium {
   width: 100%;
   height: 15px;
+  box-shadow: inset 2px 2px 0 3px rgba(255, 255, 255, 0.7);
 }
 
 .small {
   width: 50%;
   height: 10px;
+  box-shadow: inset 1px 1px 0 2px rgba(255, 255, 255, 0.7);
 }
 
 .container {
@@ -61,8 +65,10 @@ section {
 .container .circle {
   width: 45px;
   height: 45px;
-  background-color: aqua;
+  background-color: #cadf7e;
+  opacity: 0.3;
   border-radius: 100%;
+  box-shadow: inset 4px 4px 3px 3px rgba(255, 254, 254, 0.7);
 }
 .container .rectangles {
   display: flex;
